# cuda-matmul

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bat  build.sh  build_docker.bat  build_mingw.bat  build_win.sh  example.py  package_all.bat  package_for_customer.bat  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_simple.py
.github/workflows/: test.yml
lib/: __init__.py
notebooks/: gpu_performance_test.ipynb
src/: bindings.cpp  cuda_ops.cu  cuda_runtime.py  matrix_ops.cpp  matrix_ops.cu  matrix_ops.h
tests/: test_matrix_ops.py
